[gd_scene load_steps=12 format=3 uid="uid://cqyl562ctjiib"]

[ext_resource type="Theme" uid="uid://duyeylfni0bvn" path="res://assets/DolinaTheme.tres" id="1_cmtxc"]
[ext_resource type="Script" uid="uid://badu0bax2jj71" path="res://main/main.gd" id="1_qv31u"]
[ext_resource type="PackedScene" uid="uid://cofi4ghat8ymt" path="res://components/ImageViewer.tscn" id="2_wbnyf"]
[ext_resource type="PackedScene" uid="uid://dfof23axx54tq" path="res://components/Header.tscn" id="3_7a1mn"]
[ext_resource type="PackedScene" uid="uid://c58bmeeukos2g" path="res://components/SettingsDialog.tscn" id="4_o80qs"]
[ext_resource type="PackedScene" uid="uid://bbg3jlrsky0hd" path="res://components/ErrorState.tscn" id="5_bg6xb"]
[ext_resource type="PackedScene" uid="uid://bqpxyt5nyhpav" path="res://components/SafetyDialog.tscn" id="5_tv7ag"]
[ext_resource type="PackedScene" uid="uid://cmjv3d01bnurn" path="res://components/EmptyState.tscn" id="6_7a1mn"]
[ext_resource type="Script" uid="uid://ck0mkthqv2w5j" path="res://scripts/project_manager.gd" id="6_qtrhv"]
[ext_resource type="PackedScene" uid="uid://dt7qh2itdwrcl" path="res://components/TextEditor.tscn" id="9_m4geg"]
[ext_resource type="Script" uid="uid://bi81p3w8tgpcb" path="res://scripts/search_manager.gd" id="10_m4geg"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cmtxc")
script = ExtResource("1_qv31u")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.029180357, 0.07885533, 0.054689437, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Header" parent="MarginContainer/VBox" instance=ExtResource("3_7a1mn")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2
mouse_filter = 2

[node name="ColumnHeaders" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RowContainer" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ErrorState" parent="MarginContainer" instance=ExtResource("5_bg6xb")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="EmptyState" parent="MarginContainer" instance=ExtResource("6_7a1mn")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="UploadDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
file_mode = 0
access = 2

[node name="SettingsDialog" parent="." instance=ExtResource("4_o80qs")]
unique_name_in_owner = true

[node name="ImageViewer" parent="." instance=ExtResource("2_wbnyf")]
unique_name_in_owner = true
layout_mode = 1

[node name="TextEditor" parent="." instance=ExtResource("9_m4geg")]
unique_name_in_owner = true
layout_mode = 1

[node name="SafetyDialog" parent="." instance=ExtResource("5_tv7ag")]
unique_name_in_owner = true

[node name="ResizeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="SearchManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("10_m4geg")

[node name="ProjectManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_qtrhv")

[node name="ToastLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ToastContainer" type="VBoxContainer" parent="ToastLayer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 10.0
offset_bottom = 10.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 10
